--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,5 +24,11 @@ jobs:
     - name: Build
       run: go build -v ./...
 
-    - name: Test
-      run: go test -v ./...
+    - name: Upload compressed files to release
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: linux-amd64
+        asset_name: Windows-quickstart-${{ github.ref }}.zip
+        tag: ${{ github.ref }}
+        overwrite: true
