--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,14 +22,17 @@ jobs:
         go-version: 1.19
 
     - name: Build
-      run: go build -v ./...
+      run: |
+        go build -v ./...
+        cp main files/qq-chatgpt-bot
+      
 
     - name: Upload compressed files to release
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         file: linux-amd64
-        asset_name: Windows-quickstart-${{ github.ref }}.zip
+        asset_name: Linux-quickstart-${{ github.ref }}.zip
         tag: ${{ github.ref }}
         overwrite: true
         
