--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Build
       run: |
-        go build -v ./...
+        go build main.go
         cp main files/qq-chatgpt-bot
       
 
