--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,14 +25,14 @@ jobs:
       run: |
         go build main.go
         mkdir files
-        mv main files/qq-chatgpt-bot
+        mv main files/qq-chatgpt-bot-linux64
       
 
     - name: Upload compressed files to release
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: linux-amd64
+        file: qq-chatgpt-bot-linux64
         asset_name: Linux-quickstart-${{ github.ref }}.zip
         tag: ${{ github.ref }}
         overwrite: true
