--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,8 +10,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-
-  build:
+  linux:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -27,13 +26,41 @@ jobs:
         mkdir files
         mv main files/qq-chatgpt-bot-linux64
       
-
     - name: Upload compressed files to release
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         file: files/qq-chatgpt-bot-linux64
-        asset_name: Linux-${{ github.ref }}.zip
+        asset_name: qq-chatgpt-bot-linux64-${{ github.ref }}
         tag: ${{ github.ref }}
         overwrite: true
+        
+  windows:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: 1.19
+
+    - name: Build
+      run: |
+        go build main.go
+        mkdir files
+        mv main.exe files/qq-chatgpt-bot-linux64.exe
+      
+    - name: Upload compressed files to release
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: files/qq-chatgpt-bot-linux64.exe
+        asset_name: qq-chatgpt-bot-linux64-${{ github.ref }}.exe
+        tag: ${{ github.ref }}
+        overwrite: true
+    
+      
+        
+      
         
