显示换行符

--- a/config.example.cfg
+++ b/config.example.cfg
@@ -13,8 +13,8 @@ timeout = 30
 [openai]
 # 你的 OpenAI API Key, 可以在 https://beta.openai.com/account/api-keys 获取
 api_key = "sk-xxxxxx"
-# 使用的模型，默认是 text-davinci-003
-model = "text-davinci-003"
+# 使用的模型，默认是 gpt-3.5-turbo
+model = "gpt-3.5-turbo"
 # 对话温度，越大越随机 参照https://algowriting.medium.com/gpt-3-temperature-setting-101-41200ff0d0be
 temperature = 0.3
 # 每次对话最大生成字符数
