--- a/config.example.cfg
+++ b/config.example.cfg
@@ -19,4 +19,8 @@ model = "gpt-3.5-turbo"
 temperature = 0.3
 # 每次对话最大生成字符数
 max_tokens = 1000
+# openai是否走代理，默认关闭
+use_proxy = false
+# 代理地址
+proxy_url = "http://127.0.0.1:7890"
 
