--- a/config.example.cfg
+++ b/config.example.cfg
@@ -24,3 +24,10 @@ use_proxy = false
 # 代理地址
 proxy_url = "http://127.0.0.1:7890"
 
+# 角色信息配置
+[identity]
+# 角色扮演信息(如果不想使用这个功能，请删掉prompt双引号里的内容）（设定可以参考：https://github.com/easydu2002/chat_gpt_oicq/wiki/设定AI人格---以猫娘为案例【chatGPT猫娘】）
+prompt = "（你扮演的角色名称）:你要求AI扮演的角色信息\n（AI扮演的角色名称）:AI的回应"
+# 扮演的身份名称（前面填对话者，后面填bot要扮演的角色）
+stop = ["（你扮演的角色名称）:", "（AI扮演的角色名称）:"]
+
