--- a/config.example.cfg
+++ b/config.example.cfg
@@ -1,11 +1,17 @@
-# config.cfg 配置文件
+# config.toml 配置文件
 
 # cqhttp机器人配置
 [cqhttp]
 # go-cqhttp的正向WebSocket地址
 websocket = "ws://127.0.0.1:8080"
-# 是否需要@机器人才能触发
+# 群聊是否需要@机器人才能触发
 at_only = true
+# 是否开启触发关键词
+use_keyword = false
+# 触发关键词场合 可选值: all, group, private, 开启群聊关键词建议关闭at_only
+keyword_type = "group"
+# 触发关键词
+keyword = "对话"
 # 生成中提醒时间秒数
 timeout = 30
 
@@ -21,7 +27,7 @@ temperature = 0.3
 max_tokens = 1000
 # openai是否走代理，默认关闭
 use_proxy = false
-# 代理地址
+# Clash默认代理地址
 proxy_url = "http://127.0.0.1:7890"
 
 # 角色信息配置
