--- a/config.example.cfg
+++ b/config.example.cfg
@@ -27,15 +27,21 @@ temperature = 0.3
 max_tokens = 1000
 # openai是否走代理，默认关闭
 use_proxy = false
-# Clash默认代理地址
+# 代理地址
 proxy_url = "http://127.0.0.1:7890"
 
 # 角色信息配置
 [identity]
-# 角色扮演功能，默认关闭
+# 角色预设功能，默认关闭
 use_identity = false
-# 角色扮演信息(如果不想使用这个功能，请删掉prompt双引号里的内容）（设定可以参考：https://github.com/easydu2002/chat_gpt_oicq/wiki/设定AI人格---以猫娘为案例【chatGPT猫娘】）
+# 角色预设信息(设定可以参考：https://github.com/easydu2002/chat_gpt_oicq/wiki/设定AI人格---以猫娘为案例【chatGPT猫娘】）
 prompt = "（你扮演的角色名称）:你要求AI扮演的角色信息\n（AI扮演的角色名称）:AI的回应"
 # 扮演的身份名称（前面填对话者，后面填bot要扮演的角色）
 stop = ["（你扮演的角色名称）:", "（AI扮演的角色名称）:"]
 
+# 连续对话相关（实际使用中，连续对话似乎会导致更多的token使用，在这里可以设置是否启用这个功能。默认关闭。另注：预设角色不支持连续对话。）
+[context]
+# 是否在私聊中启用连续对话
+private_context = false
+# 是否在群聊中启用连续对话
+group_context = false
